# Bee-Engine-Example

./: .gitignore  .gitmodules  CMakeLists.txt
assets/Sprites/: Link.json  TestSprite.json  alttp-link.json
assets/Worlds/: Farm.tmx  Large.tmx  Stardew.tmx  TestWorld.tmx
assets/Worlds/Tilesets/: AnimatedTiles.tsx  SpringTiles.tsx  StardewValleyTiles.tsx  TestTiles.tsx  extra_tiles.tsx  v16_Outdoors2.tsx
src/: ExampleEntity.cpp  ExampleEntity.hpp  Globals.cpp  Globals.hpp  Player.cpp  Player.hpp  TestEntity.cpp  TestEntity.hpp  TestRoom.cpp  TestRoom.hpp  TestWorld.cpp  TestWorld.hpp  TextEntity.cpp  TextEntity.hpp  main.cpp
src/Entities/: Player.cpp  Player.hpp  Teleporter.cpp  Teleporter.hpp  TestEntity.cpp  TestEntity.hpp
src/Worlds/: Farm.cpp  Farm.hpp  TestWorld.cpp  TestWorld.hpp
